# FractalRenderer

./: .gitignore  CMakeLists.txt  FractalRenderer.sln  FractalRenderer.vcxproj  FractalRenderer.vcxproj.filters  README.md
shaders/: julia.frag  julia.vert  julia_animated.frag  julia_animated.vert  julia_animiert.frag  julia_gradient.comp  julia_gradient.comp.glsl  julia_gradient.frag  julia_gradient.vert  mandelbrot.comp  mandelbrot.frag  mandelbrot.vert  mandelbrot_fp32.frag  mandelbrot_fp32.vert  mandelbrot_gradient.frag  mandelbrot_gradient.vert  mandelbrot_smooth.comp.glsl  mandelbrot_smooth.frag  mandelbrot_smooth.vert  render.frag  render.vert  shader.frag  shader.vert
src/: GLWindow.cpp  GLWindow.h  Shader.h  cpu.cpp  fractal.cpp  shader.cpp  shader.h  vector2.h  vector3.h
